--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,8 @@
 
       <h6 id="publications_type_four_title" class="title"></h6>
       <div id="publications_type_four_data" class="publication_container"></div>
+      <h6 id="publications_type_five_title" class="title"></h6>
+      <div id="publications_type_five_data" class="publication_container"></div>
     </div>
   </body>
 
